[package]
name = "redis-experiments"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2018"

[[bin]]
name = "ping"
path = "src/ping.rs"

[[bin]]
name = "publish"
path = "src/publish.rs"

[[bin]]
name = "subscribe"
path = "src/subscribe.rs"

[dependencies]
futures-util = "~0.3.12"
redis = { version = "~0.19.0", features = ["tokio-comp"] }
tokio = { version = "~1.2", features = ["full"] }
